# FinGuard

./: Dockerfile  README.md  environment.py  inference.py  main.py  models.py  openenv.yaml  pyproject.toml  requirements.txt
server/: app.py
